code/bin/compiler/toniParser.py
# Generated from toniParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class toniParser ( Parser ):

    grammarFileName = "toniParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'|'", "'+'", "'?'", "'*'", 
                     "'.'", "'^'", "'$'", "<INVALID>", "'{'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "','", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "']'", "'-'" ]

    symbolicNames = [ "<INVALID>", "LPAREN", "RPAREN", "PIPE", "PLUS", "QUESTION", 
                      "STAR", "WildcardEsc", "HAT", "DOLLAR", "Char", "StartQuantity", 
                      "SingleCharEsc", "MultiCharEsc", "CatEsc", "ComplEsc", 
                      "NegCharGroup", "PosCharGroup", "EndQuantity", "QuantExact", 
                      "COMMA", "EndCategory", "IsCategory", "Letters", "Marks", 
                      "Numbers", "Punctuation", "Separators", "Symbols", 
                      "Others", "IsBlock", "NestedSingleCharEsc", "NestedMultiCharEsc", 
                      "NestedCatEsc", "NestedComplEsc", "NestedNegCharGroup", 
                      "NestedPosCharGroup", "EndCharGroup", "DASH", "XmlChar" ]

    RULE_root = 0
    RULE_regExp = 1
    RULE_branch = 2
    RULE_piece = 3
    RULE_quantifier = 4
    RULE_quantity = 5
    RULE_quantRange = 6
    RULE_quantMin = 7
    RULE_quantMax = 8
    RULE_atom = 9
    RULE_charClass = 10
    RULE_charClassExpr = 11
    RULE_charGroup = 12
    RULE_posCharGroup = 13
    RULE_charRange = 14
    RULE_seRange = 15
    RULE_charOrEsc = 16
    RULE_charClassEsc = 17
    RULE_catEsc = 18
    RULE_complEsc = 19
    RULE_charProp = 20

    ruleNames =  [ "root", "regExp", "branch", "piece", "quantifier", "quantity", 
                   "quantRange", "quantMin", "quantMax", "atom", "charClass", 
                   "charClassExpr", "charGroup", "posCharGroup", "charRange", 
                   "seRange", "charOrEsc", "charClassEsc", "catEsc", "complEsc", 
                   "charProp" ]

    EOF = Token.EOF
    LPAREN=1
    RPAREN=2
    PIPE=3
    PLUS=4
    QUESTION=5
    STAR=6
    WildcardEsc=7
    HAT=8
    DOLLAR=9
    Char=10
    StartQuantity=11
    SingleCharEsc=12
    MultiCharEsc=13
    CatEsc=14
    ComplEsc=15
    NegCharGroup=16
    PosCharGroup=17
    EndQuantity=18
    QuantExact=19
    COMMA=20
    EndCategory=21
    IsCategory=22
    Letters=23
    Marks=24
    Numbers=25
    Punctuation=26
    Separators=27
    Symbols=28
    Others=29
    IsBlock=30
    NestedSingleCharEsc=31
    NestedMultiCharEsc=32
    NestedCatEsc=33
    NestedComplEsc=34
    NestedNegCharGroup=35
    NestedPosCharGroup=36
    EndCharGroup=37
    DASH=38
    XmlChar=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def regExp(self):
            return self.getTypedRuleContext(toniParser.RegExpContext,0)


        def EOF(self):
            return self.getToken(toniParser.EOF, 0)

        def HAT(self):
            return self.getToken(toniParser.HAT, 0)

        def DOLLAR(self):
            return self.getToken(toniParser.DOLLAR, 0)

        def getRuleIndex(self):
            return toniParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = toniParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 42
                self.match(toniParser.HAT)


            self.state = 45
            self.regExp()
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 46
                self.match(toniParser.DOLLAR)


            self.state = 49
            self.match(toniParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def branch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(toniParser.BranchContext)
            else:
                return self.getTypedRuleContext(toniParser.BranchContext,i)


        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(toniParser.PIPE)
            else:
                return self.getToken(toniParser.PIPE, i)

        def getRuleIndex(self):
            return toniParser.RULE_regExp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegExp" ):
                return visitor.visitRegExp(self)
            else:
                return visitor.visitChildren(self)




    def regExp(self):

        localctx = toniParser.RegExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_regExp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.branch()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 52
                self.match(toniParser.PIPE)
                self.state = 53
                self.branch()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BranchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def piece(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(toniParser.PieceContext)
            else:
                return self.getTypedRuleContext(toniParser.PieceContext,i)


        def getRuleIndex(self):
            return toniParser.RULE_branch

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBranch" ):
                return visitor.visitBranch(self)
            else:
                return visitor.visitChildren(self)




    def branch(self):

        localctx = toniParser.BranchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_branch)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 6442660994) != 0):
                self.state = 59
                self.piece()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PieceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(toniParser.AtomContext,0)


        def quantifier(self):
            return self.getTypedRuleContext(toniParser.QuantifierContext,0)


        def getRuleIndex(self):
            return toniParser.RULE_piece

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPiece" ):
                return visitor.visitPiece(self)
            else:
                return visitor.visitChildren(self)




    def piece(self):

        localctx = toniParser.PieceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_piece)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.atom()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2160) != 0):
                self.state = 66
                self.quantifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUESTION(self):
            return self.getToken(toniParser.QUESTION, 0)

        def STAR(self):
            return self.getToken(toniParser.STAR, 0)

        def PLUS(self):
            return self.getToken(toniParser.PLUS, 0)

        def StartQuantity(self):
            return self.getToken(toniParser.StartQuantity, 0)

        def quantity(self):
            return self.getTypedRuleContext(toniParser.QuantityContext,0)


        def EndQuantity(self):
            return self.getToken(toniParser.EndQuantity, 0)

        def getRuleIndex(self):
            return toniParser.RULE_quantifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantifier" ):
                return visitor.visitQuantifier(self)
            else:
                return visitor.visitChildren(self)




    def quantifier(self):

        localctx = toniParser.QuantifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_quantifier)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.match(toniParser.QUESTION)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.match(toniParser.STAR)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.match(toniParser.PLUS)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.match(toniParser.StartQuantity)
                self.state = 73
                self.quantity()
                self.state = 74
                self.match(toniParser.EndQuantity)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quantRange(self):
            return self.getTypedRuleContext(toniParser.QuantRangeContext,0)


        def quantMin(self):
            return self.getTypedRuleContext(toniParser.QuantMinContext,0)


        def quantMax(self):
            return self.getTypedRuleContext(toniParser.QuantMaxContext,0)


        def QuantExact(self):
            return self.getToken(toniParser.QuantExact, 0)

        def getRuleIndex(self):
            return toniParser.RULE_quantity

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantity" ):
                return visitor.visitQuantity(self)
            else:
                return visitor.visitChildren(self)




    def quantity(self):

        localctx = toniParser.QuantityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_quantity)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.quantRange()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.quantMin()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.quantMax()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.match(toniParser.QuantExact)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantRangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QuantExact(self, i:int=None):
            if i is None:
                return self.getTokens(toniParser.QuantExact)
            else:
                return self.getToken(toniParser.QuantExact, i)

        def COMMA(self):
            return self.getToken(toniParser.COMMA, 0)

        def getRuleIndex(self):
            return toniParser.RULE_quantRange

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantRange" ):
                return visitor.visitQuantRange(self)
            else:
                return visitor.visitChildren(self)




    def quantRange(self):

        localctx = toniParser.QuantRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_quantRange)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(toniParser.QuantExact)
            self.state = 85
            self.match(toniParser.COMMA)
            self.state = 86
            self.match(toniParser.QuantExact)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantMinContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QuantExact(self):
            return self.getToken(toniParser.QuantExact, 0)

        def COMMA(self):
            return self.getToken(toniParser.COMMA, 0)

        def getRuleIndex(self):
            return toniParser.RULE_quantMin

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantMin" ):
                return visitor.visitQuantMin(self)
            else:
                return visitor.visitChildren(self)




    def quantMin(self):

        localctx = toniParser.QuantMinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_quantMin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(toniParser.QuantExact)
            self.state = 89
            self.match(toniParser.COMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantMaxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(toniParser.COMMA, 0)

        def QuantExact(self):
            return self.getToken(toniParser.QuantExact, 0)

        def getRuleIndex(self):
            return toniParser.RULE_quantMax

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantMax" ):
                return visitor.visitQuantMax(self)
            else:
                return visitor.visitChildren(self)




    def quantMax(self):

        localctx = toniParser.QuantMaxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_quantMax)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(toniParser.COMMA)
            self.state = 92
            self.match(toniParser.QuantExact)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Char(self):
            return self.getToken(toniParser.Char, 0)

        def charClass(self):
            return self.getTypedRuleContext(toniParser.CharClassContext,0)


        def LPAREN(self):
            return self.getToken(toniParser.LPAREN, 0)

        def regExp(self):
            return self.getTypedRuleContext(toniParser.RegExpContext,0)


        def RPAREN(self):
            return self.getToken(toniParser.RPAREN, 0)

        def getRuleIndex(self):
            return toniParser.RULE_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = toniParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_atom)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(toniParser.Char)
                pass
            elif token in [7, 12, 13, 16, 17, 31, 32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.charClass()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.match(toniParser.LPAREN)
                self.state = 97
                self.regExp()
                self.state = 98
                self.match(toniParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def charClassEsc(self):
            return self.getTypedRuleContext(toniParser.CharClassEscContext,0)


        def charClassExpr(self):
            return self.getTypedRuleContext(toniParser.CharClassExprContext,0)


        def WildcardEsc(self):
            return self.getToken(toniParser.WildcardEsc, 0)

        def getRuleIndex(self):
            return toniParser.RULE_charClass

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharClass" ):
                return visitor.visitCharClass(self)
            else:
                return visitor.visitChildren(self)




    def charClass(self):

        localctx = toniParser.CharClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_charClass)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 13, 31, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.charClassEsc()
                pass
            elif token in [16, 17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.charClassExpr()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.match(toniParser.WildcardEsc)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharClassExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def charGroup(self):
            return self.getTypedRuleContext(toniParser.CharGroupContext,0)


        def EndCharGroup(self):
            return self.getToken(toniParser.EndCharGroup, 0)

        def NegCharGroup(self):
            return self.getToken(toniParser.NegCharGroup, 0)

        def PosCharGroup(self):
            return self.getToken(toniParser.PosCharGroup, 0)

        def getRuleIndex(self):
            return toniParser.RULE_charClassExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharClassExpr" ):
                return visitor.visitCharClassExpr(self)
            else:
                return visitor.visitChildren(self)




    def charClassExpr(self):

        localctx = toniParser.CharClassExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_charClassExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not(_la==16 or _la==17):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 108
            self.charGroup()
            self.state = 109
            self.match(toniParser.EndCharGroup)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharGroupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def posCharGroup(self):
            return self.getTypedRuleContext(toniParser.PosCharGroupContext,0)


        def DASH(self):
            return self.getToken(toniParser.DASH, 0)

        def getRuleIndex(self):
            return toniParser.RULE_charGroup

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharGroup" ):
                return visitor.visitCharGroup(self)
            else:
                return visitor.visitChildren(self)




    def charGroup(self):

        localctx = toniParser.CharGroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_charGroup)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.posCharGroup()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==38:
                    self.state = 112
                    self.match(toniParser.DASH)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(toniParser.DASH)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PosCharGroupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def charRange(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(toniParser.CharRangeContext)
            else:
                return self.getTypedRuleContext(toniParser.CharRangeContext,i)


        def charClassEsc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(toniParser.CharClassEscContext)
            else:
                return self.getTypedRuleContext(toniParser.CharClassEscContext,i)


        def DASH(self, i:int=None):
            if i is None:
                return self.getTokens(toniParser.DASH)
            else:
                return self.getToken(toniParser.DASH, i)

        def getRuleIndex(self):
            return toniParser.RULE_posCharGroup

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPosCharGroup" ):
                return visitor.visitPosCharGroup(self)
            else:
                return visitor.visitChildren(self)




    def posCharGroup(self):

        localctx = toniParser.PosCharGroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_posCharGroup)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 118
                self.match(toniParser.DASH)


            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 121
                self.charRange()
                pass

            elif la_ == 2:
                self.state = 122
                self.charClassEsc()
                pass


            self.state = 134
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==38:
                        self.state = 125
                        self.match(toniParser.DASH)


                    self.state = 130
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                    if la_ == 1:
                        self.state = 128
                        self.charRange()
                        pass

                    elif la_ == 2:
                        self.state = 129
                        self.charClassEsc()
                        pass

             
                self.state = 136
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharRangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def seRange(self):
            return self.getTypedRuleContext(toniParser.SeRangeContext,0)


        def XmlChar(self):
            return self.getToken(toniParser.XmlChar, 0)

        def getRuleIndex(self):
            return toniParser.RULE_charRange

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharRange" ):
                return visitor.visitCharRange(self)
            else:
                return visitor.visitChildren(self)




    def charRange(self):

        localctx = toniParser.CharRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_charRange)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.seRange()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(toniParser.XmlChar)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeRangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def charOrEsc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(toniParser.CharOrEscContext)
            else:
                return self.getTypedRuleContext(toniParser.CharOrEscContext,i)


        def DASH(self):
            return self.getToken(toniParser.DASH, 0)

        def getRuleIndex(self):
            return toniParser.RULE_seRange

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeRange" ):
                return visitor.visitSeRange(self)
            else:
                return visitor.visitChildren(self)




    def seRange(self):

        localctx = toniParser.SeRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_seRange)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.charOrEsc()
            self.state = 142
            self.match(toniParser.DASH)
            self.state = 143
            self.charOrEsc()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharOrEscContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def XmlChar(self):
            return self.getToken(toniParser.XmlChar, 0)

        def SingleCharEsc(self):
            return self.getToken(toniParser.SingleCharEsc, 0)

        def getRuleIndex(self):
            return toniParser.RULE_charOrEsc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharOrEsc" ):
                return visitor.visitCharOrEsc(self)
            else:
                return visitor.visitChildren(self)




    def charOrEsc(self):
